# haggis-aero-2018

./: .gitignore  README.md  installOpenCV.sh
cvlib/: CMakeLists.txt  README.md  extrinsics.yml  intrinsics.yml
cvlib/calibration/: CMakeLists.txt  fileIO.cpp  settings.cpp
cvlib/lib/: CMakeLists.txt  OCRDemo.h  camLib.cpp  camLib.h  character_detector.cpp  character_detector.h  configuration.cpp  configuration.h  configuration.h.in  fileIO.cpp  fileIO.h  letter_detection.cpp  letter_detection.h  library.cpp  library.h  region_detection.cpp  region_detection.h  scene.h  settings.cpp  settings.h
cvlib/network/: CMakeLists.txt  Client.cpp  Client.h  PracticalSocket.cpp  PracticalSocket.h  Server.cpp  Server.h  config.h
cvlib/test/: CMakeLists.txt  camDemo.cpp  demo.cpp  recordedDemo.cpp
cvlib/tools/: CMakeLists.txt  cameraCalibration.cpp  cameraCalibration.h
cvlib/videoDownlink/: CMakeLists.txt  PracticalSocket.cpp
drone/: README.md  __main__.py  __tcpTester__.py  __testSpin__.py  binding.py  droneCode.py  navigation.py  tcpServer.py
